Changed layout of item-details / transcription to prevent overflow issues.

--- a/css/manuscript-viewer/_item-details.less
+++ b/css/manuscript-viewer/_item-details.less
@@ -14,14 +14,14 @@
   .box-sizing;
   background-color: rgba(255, 255, 255, 0.95);
   border-right: solid 1px;
-  position: fixed;
+  position: absolute;
   left: 0px;
   z-index: 1;
-  height: 100%;
+  height: 300px;
   width: 50%;
   width: 50%;
   .item-details-content {
-    padding: 1em 3em 6em;
+    padding: 1em 3em 3em;
   }
   h1 {
     .header;
