--- a/css/manuscript-viewer/_transcription.less
+++ b/css/manuscript-viewer/_transcription.less
@@ -1,8 +1,8 @@
 #transcription {
-  position: fixed;
+  position: absolute;
   right: 0px;
   z-index: 1;
-  height: 100%;
+  height: 300px;
   width: 50%;
   background-color: rgba(255, 255, 255, 0.95);
 }
