--- a/css/manuscript-viewer/manuscript-viewer.css
+++ b/css/manuscript-viewer/manuscript-viewer.css
@@ -403,14 +403,14 @@ body.loading .modal {
   box-sizing: border-box;
   background-color: rgba(255, 255, 255, 0.95);
   border-right: solid 1px;
-  position: fixed;
+  position: absolute;
   left: 0px;
   z-index: 1;
-  height: 100%;
+  height: 300px;
   width: 50%;
 }
 #item-details .item-details-content {
-  padding: 1em 3em 6em;
+  padding: 1em 3em 3em;
 }
 #item-details h1 {
   font-family: Crimson Text, serif;
@@ -452,10 +452,10 @@ body.loading .modal {
   font-style: italic;
 }
 #transcription {
-  position: fixed;
+  position: absolute;
   right: 0px;
   z-index: 1;
-  height: 100%;
+  height: 300px;
   width: 50%;
   background-color: rgba(255, 255, 255, 0.95);
 }
